test/errors/function_no_body.correct
error: function_no_body.li:2:4: function 'functionWithNoBody' has no body
│ fn functionWithNoBody();
│ ~~~~~~~~~~~~~~~~~~~~~
│    ^
